--- a/forms.html
+++ b/forms.html
@@ -4,24 +4,52 @@
 
 <head>
 
-    <title>replit</title>
+    <title>Registration Page</title>
 
     <link rel="stylesheet" href="style.css">
-
+    <title>Registration Form</title>
+    
+<body bgcolor="#C8E8ED">
 </head>
 
 <body>
 
 <fieldset>
-    <legend>Student registration form
+    <legend>Student registration form 
 
     </legend>
 <form>
     <label>
-        Enter your first name
+         First name
     </label> <br>
     <input type="text"> <br>
-    <label>
+   
+<label>
+   Middle Name
+</label> <br>
+<input type="text"> <br>
+<label>
+    Course
+</label> <br>
+<select> 
+    <option>
+        Science
+    </option>
+    <option>
+        Commerce
+    </option>
+    <option>
+        Arts
+    </option>
+</select><br>
+<label>
+    Section
+</label> <br>
+<input type="radio" name="Section" value="A">A <br>
+<input type="radio" name="Section" value="B">B</i> <br>
+<input type="radio" name="Section" value="C">C <br>
+<input type="radio" name="Section" value="D">D <br>
+<label>
         Enter email
     </label> <br>
     <input type="email" placeholder="example@gmail.com" required> <br>
@@ -29,10 +57,22 @@
         Enter password
     </label> <br>
     <input type="password" required> <br>
+
+<label>
+    Re-type password
+</label> <br>
+<input type="password" required> <br>
+
     <label>
         Enter mobile number
     </label> <br>
     <input type="number"> <br>
+
+    <label>
+        Enter postal code
+    </label> <br>
+    <input type="number"> <br>
+    
     <label>
         Enter your you DOB
     </label> <br>
